--- a/streampipes-processors-text-mining-jvm/pom.xml
+++ b/streampipes-processors-text-mining-jvm/pom.xml
@@ -99,7 +99,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.streampipes.processors.text-mining.jvm.TextMiningJvmInit</mainClass>
+                                    <mainClass>org.streampipes.processors.textmining.jvm.TextMiningJvmInit</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                             </transformers>
