--- a/streampipes-connect-adapter/pom.xml
+++ b/streampipes-connect-adapter/pom.xml
@@ -20,7 +20,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>streampipes-parent</artifactId>
+        <artifactId>streampipes-connect-adapters</artifactId>
         <groupId>org.streampipes</groupId>
         <version>0.62.1-SNAPSHOT</version>
     </parent>
