--- a/streampipes-connect-adapter/pom.xml
+++ b/streampipes-connect-adapter/pom.xml
@@ -95,6 +95,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-sse</artifactId>
+            <version>2.28</version>
         </dependency>
         <dependency>
             <groupId>com.ullink.slack</groupId>
