--- a/streampipes-connect-adapter/pom.xml
+++ b/streampipes-connect-adapter/pom.xml
@@ -62,6 +62,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-jetty-http</artifactId>
+            <version>2.28</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
