--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
     - echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
     - mvn clean package javadoc:aggregate -U -DskipTests
     - export MVN_VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\[')
-    - echo $MVN_VERSION >> ./target/mvn_version
+    - "echo $MVN_VERSION >> ./target/mvn_version"
   artifacts:
     paths:
       - ./streampipes-connect-container/target/*.jar
