Change final name of artifacts

--- a/streampipes-connect-adapter/pom.xml
+++ b/streampipes-connect-adapter/pom.xml
@@ -112,5 +112,9 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>streampipes-connect-adapter</finalName>
+    </build>
+
 
 </project>
