Remove except statement

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,12 +24,14 @@ build:
     - "echo $MVN_VERSION >> ./target/mvn_version"
   artifacts:
     paths:
-      - ./streampipes-connect-container/target/*.jar
-    expire_in:  1 hour
-  except:
       - /release-.*$/
+      - ./streampipes-connect-container/target/*.jar
       - ./*/target/*.jar
-      - ./target/mvn_version
+    expire_in:  1 hour
+#  except:
+#      - /release-.*$/
+#      - ./*/target/*.jar
+#      - ./target/mvn_version
 
 
 docker-connect-container:
@@ -38,7 +40,8 @@ docker-connect-container:
    dependencies:
      - build
    script:
-     - export MVN_VERSION=0.62.1-SNAPSHOT
+#     - export MVN_VERSION=0.62.1-SNAPSHOT
+     - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
      - docker login -u zehnder -p $HARBOR_PASSWORD ipe-harbor.fzi.de
      - docker build --pull -t $IMAGE_NAME/streampipes-connect-worker:latest -t $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:latest -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION ./streampipes-connect-adapter/
