--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,11 +42,12 @@ docker-connect-container:
    script:
      - ls
      - cd streampipes-connect-adapter/
+     - ls
      - export MVN_VERSION=0.62.1-SNAPSHOT
 #     - export MVN_VERSION=$(cat ./target/mvn_version)
      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
      - docker login -u zehnder -p $HARBOR_PASSWORD ipe-harbor.fzi.de
-     - docker build --pull -t $IMAGE_NAME/streampipes-connect-worker:latest -t $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:latest -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION ./streampipes-connect-adapter/
+     - docker build --pull -t $IMAGE_NAME/streampipes-connect-worker:latest -t $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:latest -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION .
      - docker push $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION
      - docker push $IMAGE_NAME/streampipes-connect-worker:latest
      - docker push $HARBOR_IMAGE_NAME/streampipes-connect:$MVN_VERSION
