Remove push to harbor ve adapters module to a new project

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ docker-connect-container:
      - docker build --pull -t $IMAGE_NAME/streampipes-connect-worker:latest -t $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:latest -t $HARBOR_IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION .
      - docker push $IMAGE_NAME/streampipes-connect-worker:$MVN_VERSION
      - docker push $IMAGE_NAME/streampipes-connect-worker:latest
-     - docker push $HARBOR_IMAGE_NAME/streampipes-connect:$MVN_VERSION
-     - docker push $HARBOR_IMAGE_NAME/streampipes-connect:latest
+#     - docker push $HARBOR_IMAGE_NAME/streampipes-connect:$MVN_VERSION
+#     - docker push $HARBOR_IMAGE_NAME/streampipes-connect:latest
    only:
      - dev
