--- a/streampipes-connect-adapter/pom.xml
+++ b/streampipes-connect-adapter/pom.xml
@@ -28,6 +28,11 @@
 
 
     <artifactId>streampipes-connect-adapter</artifactId>
+
+    <properties>
+        <jsrosbridge.version>0.2.0</jsrosbridge.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.streampipes</groupId>
@@ -105,6 +110,11 @@
             <version>1.2.0</version>
         </dependency>
         <dependency>
+            <groupId>edu.wpi.rail</groupId>
+            <artifactId>jrosbridge</artifactId>
+            <version>${jsrosbridge.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -112,9 +122,47 @@
         </dependency>
     </dependencies>
 
+
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.streampipes.connect.ConnectAdpaterInit</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            </transformers>
+                            <filters>
+
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/maven/com.github.jsonld-java/jsonld-java/pom.xml</exclude>
+                                        <exclude>META-INF/maven/com.github.jsonld-java/jsonld-java-sesame/pom.xml
+                                        </exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
         <finalName>streampipes-connect-adapter</finalName>
     </build>
-
 
 </project>
