Change worker name

--- a/services/connect-worker-main/docker-compose.yml
+++ b/services/connect-worker-main/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2"
 services:
-  connect-worker:
+  connect-worker-main:
     image: ${SP_DOCKER_REGISTRY}streampipes/streampipes-connect-adapters/streampipes-connect-worker:${SP_BACKEND_VERSION}
     depends_on:
       - consul
@@ -9,7 +9,7 @@ services:
       - "8098:8098"
     environment:
       - SP_CONNECT_CONTAINER_HOST=connect-master
-      - SP_CONNECT_CONTAINER_WORKER=connect-worker
+      - SP_CONNECT_CONTAINER_WORKER=connect-worker-main
       - SP_KAFKA_HOST=${SP_KAFKA_HOST}
     volumes:
       - connect:/data/
