--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.streampipes</groupId>
@@ -31,14 +32,16 @@
         <consul-client.version>1.3.5</consul-client.version>
         <jackson.version>2.9.9</jackson.version>
         <javassist.version>3.19.0-GA</javassist.version>
-        <jersey.version>2.28</jersey.version>
-        <jetty.version>9.4.18.v20190429</jetty.version>
+        <jersey.version>2.27</jersey.version>
+        <jetty.version>9.4.19.v20190610</jetty.version>
         <kafka.version>2.2.0</kafka.version>
-        <logback-classic.version>1.1.9</logback-classic.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
         <persistence-api.version>1.0.2</persistence-api.version>
         <rdf4j.version>2.4.5</rdf4j.version>
         <shiro.version>1.2.3</shiro.version>
+        <spring.version>2.1.6.RELEASE</spring.version>
         <streampipes-empire.version>1.9.9</streampipes-empire.version>
+        <swagger.version>2.0.0</swagger.version>
         <type-parser.version>0.6.0</type-parser.version>
 
         <junit.version>4.12</junit.version>
@@ -53,6 +56,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
@@ -92,6 +102,16 @@
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
                 <version>${commons-beanutils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-jaxrs2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.persistence</groupId>
@@ -234,6 +254,16 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.9.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jersey</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.streampipes</groupId>
