--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <consul-client.version>1.3.5</consul-client.version>
         <jackson.version>2.9.9</jackson.version>
+        <javax.ws.rs.version>2.1</javax.ws.rs.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <jersey.version>2.27</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
@@ -68,10 +69,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback-classic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>${javax.ws.rs.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
