--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <consul-client.version>1.3.5</consul-client.version>
         <jackson.version>2.9.9</jackson.version>
         <javax.ws.rs.version>2.1</javax.ws.rs.version>
+        <javax-servlet-api.version>3.1.0</javax-servlet-api.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <jersey.version>2.27</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
@@ -62,14 +63,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
@@ -129,6 +122,11 @@
                 <groupId>javax.persistence</groupId>
                 <artifactId>persistence-api</artifactId>
                 <version>${persistence-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax-servlet-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.containers</groupId>
@@ -270,6 +268,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-jersey</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jetty</artifactId>
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
