--- a/nginx_config/default.conf
+++ b/nginx_config/default.conf
@@ -24,7 +24,9 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://connect-master:8099/;
+    if ($request_uri ~* "/streampipes-connect/(.*)") {
+                proxy_pass  http://connect-master:8099/$1;
+    }
     proxy_ssl_session_reuse off;
     proxy_set_header Host $http_host;
   }
